Import of JETTERO/Math-Business-EMA-1.05 from CPAN.
gitpan-cpan-distribution: Math-Business-EMA
gitpan-cpan-version:      1.05
gitpan-cpan-path:         JETTERO/Math-Business-EMA-1.05.tar.gz
gitpan-cpan-author:       JETTERO
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,3 +1,6 @@
+1.05:  Sun Oct 13 11:16:11 EDT 2002
+   - jettero added the start_with function
+
 1.04:  Tue Jun  4 20:06:21 EDT 2002
    - jettero updated the dist a bit more
 
