Import of JETTERO/Math-Business-EMA-1.06 from CPAN.
gitpan-cpan-distribution: Math-Business-EMA
gitpan-cpan-version:      1.06
gitpan-cpan-path:         JETTERO/Math-Business-EMA-1.06.tar.gz
gitpan-cpan-author:       JETTERO
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,3 +1,9 @@
+1.06:  Thu Dec  5 14:28:46 EST 2002
+   - jettero intruduced the
+     undef-until-there-is-enough-data-concept, then used the
+     ::SMA result to calculate the first EMA entry (like
+     you're supposed to).
+
 1.05:  Sun Oct 13 11:16:11 EDT 2002
    - jettero added the start_with function
 
