--- a/Changes
+++ b/Changes
@@ -1,3 +1,6 @@
+1.08:  Mon Jun  7 13:56:20 EDT 2004
+   - jettero made it so new takes a number of days...
+
 1.06:  Thu Dec  5 14:28:46 EST 2002
    - jettero intruduced the
      undef-until-there-is-enough-data-concept, then used the
